# SortAnimation

./: .gitignore  CMakeLists.txt  README.md
include/: anim_sort_elem.hpp  app.hpp  last_sort_op_controller.hpp  reciever.hpp  render_anim_sort_functor.hpp  sort_animator.hpp  sort_op_controller.hpp  sort_op_reciever.hpp  sort_system.hpp  sorting_system.hpp  sorts.hpp
src/: anim_sort_elem.cpp  app.cpp  main.cpp  reciever.cpp  render_anim_sort_functor.cpp  sort_animator.cpp  sort_op_controller.cpp  sort_system.cpp  sorting_system.cpp
